# little-conflict

./: Cargo.toml  LICENSE  cspell.yaml
.cspell/: bevy.words.txt  rust_misc.words.txt
src/: components.rs  main.rs  systems.rs
