[package]
name = "little-conflict"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "render",
    "subpixel_glyph_atlas",
    "dynamic",
]

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3
